--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
 			<p class="credits">A portfolio made by <br><br><span class="credits_white">Paolo Vedorin</span></p>
 			<p class="credits credits_two">Contact me at <br><br><span class="credits_white">vedorinpaolo@gmail.com</span>
 			</p>
+			<img class="logo" src="img/logo.png" alt="logo">
 		</div>
 	</nav>
 	<main>
@@ -34,44 +35,44 @@
 				<div class="down down_first">
 					<h1 >Wish Car</h1>
 					<div class="box img_description">
-						<img class="img_mobile" src="./img/web-640.jpeg">
-						<img class="img_small img_first" src="./img/web-1280.jpeg">
+						<img class="img_mobile" src="./img/web-640.jpeg" alt="img of first down">
+						<img class="img_small img_first" src="./img/web-1280.jpeg" alt="img of first down-laptop">
 					</div>
-					<p class="box_description"><a href="https://github.com/paolovedorin93/HTML-CSS">Wish Car</a> - Front End<br>Co-created</p>
+					<p class="box_description"><a class="a" href="https://github.com/paolovedorin93/HTML-CSS">Wish Car</a> - Front End<br>Co-created</p>
 					<p class="description_pic first_description">This is my first project in HTML/CSS. I have to work for an imaginary farm of electric cars. Its name is "Wish Car" and this is its website.</p>
 				</div>
 				<div class="down down_second">
 					<h1>Animal Cards</h1>
 					<div class="box img_description">
-						<img class="img_mobile" src="./img/web2-640.jpeg">
-						<img class="img_small img_second" src="./img/web2-1280.jpeg">
+						<img class="img_mobile" src="./img/web2-640.jpeg" alt="img of secondo down">
+						<img class="img_small img_second" src="./img/web2-1280.jpeg" alt="img of second down-laptop">
 					</div>
-					<p class="box_description"><a href="https://github.com/paolovedorin93/fend-animal-cards-master">Animal Cards</a> - Front End</p>
+					<p class="box_description"><a class="a" href="https://github.com/paolovedorin93/fend-animal-cards-master">Animal Cards</a> - Front End</p>
 					<p class="description_pic second_description">This is my first project for "Google Front End Challenge". I've made a card about cats.</p>
 				</div>
 				<div class="down down_third">
 					<h1>Stage project: first Laravel</h1>
 					<div class="box img_description">
-						<img class="img_mobile" src="./img/web3-640.jpeg">
-						<img class="img_small img_third" src="./img/web3-1280.jpeg">
+						<img class="img_mobile" src="./img/web3-640.jpeg" alt="img of the third down">
+						<img class="img_small img_third" src="./img/web3-1280.jpeg" alt="img of the third down-laptop">
 					</div>
-					<p class="box_description"><a href="https://github.com/paolovedorin93/sicurezza20">AgID</a> - Front & Back End</p>
+					<p class="box_description"><a class="a" href="https://github.com/paolovedorin93/sicurezza20">AgID</a> - Front & Back End</p>
 					<p class="description_pic third_description">This is my first project for a public authority. I've made a simple web app to take care about what is in used to protect their online structures.</p>
 				</div>
 				<div class="down down_fourth">
 					<h1>Stage project: second Laravel</h1>
 					<div class="box img_description">
-						<img class="img_mobile" src="./img/web4-640.jpeg">
-						<img class="img_small img_fourth" src="./img/web4-1280.jpeg">
+						<img class="img_mobile" src="./img/web4-640.jpeg" alt="img of the fourth down">
+						<img class="img_small img_fourth" src="./img/web4-1280.jpeg" alt="img of the fourth down-laptop">
 					</div>
-					<p class="box_description"><a href="https://github.com/paolovedorin93/Primo-Laravel">AgID</a> - Front & Back End</p>
+					<p class="box_description"><a class="a" href="https://github.com/paolovedorin93/Primo-Laravel">AgID</a> - Front & Back End</p>
 					<p class="description_pic fourth_description">This is my second project for a public authority. It's an evolution of my first project, opened to public. It's a sort of little community.</p>
 				</div>
 				<div class="down down_fifth">
 					<h1>Contacts</h1>
-					<span class="box box_facebook"><a class="facebook" href="https://www.facebook.com/paolo.vedorin.31"><i class="fa fa-facebook-official" style="font-size:20px"></i> - Facebook</a></span>
-					<span class="box box_google"><a class="google" href="https://plus.google.com/108771782789202021275"><br><i class="fa fa-google-plus" style="font-size:20px"></i> - Google Plus</a></span>
-					<span class="box box_github"><a class="github" href="https://github.com/paolovedorin93"><br><i class="fa fa-github" style="font-size:20px"></i> - GitHub</a></span>
+					<span class="box box_facebook"><a class="a facebook" href="https://www.facebook.com/paolo.vedorin.31"><i class="fa fa-facebook-official"></i> - Facebook</a></span>
+					<span class="box box_google"><a class="a google" href="https://plus.google.com/108771782789202021275"><br><i class="fa fa-google-plus"></i> - Google Plus</a></span>
+					<span class="box box_github"><a class="a github" href="https://github.com/paolovedorin93"><br><i class="fa fa-github"></i> - GitHub</a></span>
 					<br><br>
 				</div>
 			</div>
