--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
 	<title>Portfolio Paolo Vedorin</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="./portfolio.css" media="screen and (max-width:550px)">
-	<link rel="stylesheet" type="text/css" href="./portfolioLaptop.css" media="screen and (min-width:551px)">
+	<link rel="stylesheet" type="text/css" href="css/portfolio.css" media="screen and (max-width:550px)">
+	<link rel="stylesheet" type="text/css" href="css/portfolioLaptop.css" media="screen and (min-width:551px)">
 	<link href="https://fonts.googleapis.com/css?family=Arsenal|Chivo" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
 	<header>
@@ -79,7 +78,6 @@
 			<div class="container_left"></div>
 		</div>
 	</main>
-
 	<script type="text/javascript">
 		menu.addEventListener('click', function(e){
 			drawer.classList.toggle('open');
@@ -91,5 +89,6 @@
 			$('#drawer').removeClass('open');
 		});
 	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
